Fixes to allow multi-item
